--- a/styles/_vars.scss
+++ b/styles/_vars.scss
@@ -1,6 +1,8 @@
 $mainColor: #1b1b1b;
 $grayColor: #7d7d7d;
-$medium: 'Graphik Medium';
+$medium: "Graphik Medium";
 $blue: #3e29e3;
 $grid: repeat(12, minmax(60px, min(80px, 8.33vw)));
+$gridTablet: repeat(8, minmax(56px, 1fr));
+$gridMobile: repeat(4, minmax(56px, 88px));
 $error: #e80f3b;
