--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,7 @@ a {
 body {
   font-family: "Graphik", sans-serif;
   color: #1b1b1b;
+  overflow-x: hidden;
 }
 
 img {
@@ -50,6 +51,9 @@ img {
 }
 .header .user .name__middlename {
   color: #7d7d7d;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
 }
 .header .menu {
   z-index: 100;
@@ -96,7 +100,7 @@ img {
   top: 0;
   left: 0;
   z-index: 10;
-  transform: translateX(-100%);
+  transform: translateY(-130%);
   background: url("../images/png/menuBg.png") no-repeat;
   background-size: cover;
   background-position: center;
@@ -106,12 +110,12 @@ img {
   padding: 8px;
 }
 .menu-layout.active {
-  transform: translateX(0);
+  transform: translateY(0);
 }
 .menu-layout .menu__content {
   grid-column: span 7;
   display: grid;
-  grid-template-columns: repeat(12, minmax(60px, min(80px, 8.33vw)));
+  grid-template-columns: repeat(12, 1fr);
   grid-auto-rows: minmax(0, -webkit-max-content);
   grid-auto-rows: minmax(0, max-content);
   -moz-column-gap: 32px;
@@ -143,7 +147,9 @@ img {
   margin-top: 64px;
   grid-column: 2/12;
   display: grid;
-  grid-template-columns: repeat(12, minmax(60px, min(80px, 8.33vw)));
+  grid-template-columns: repeat(12, 1fr);
+  -moz-column-gap: 32px;
+       column-gap: 32px;
   color: #1b1b1b;
 }
 .menu-layout .menu__content__main .performer {
@@ -196,7 +202,39 @@ img {
   top: 17%;
 }
 
+.aside-btn {
+  margin-top: 150px;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(233, 233, 233, 0.431372549);
+  position: fixed;
+  grid-column: span 2;
+  width: 78px;
+  height: 58px;
+  border-radius: 50%;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.08);
+}
+.aside-btn .aside-arrow {
+  width: 50px;
+  height: 30px;
+  display: grid;
+  overflow: hidden;
+}
+.aside-btn .aside-arrow::before {
+  content: "";
+  grid-area: 1/1;
+  background: #3e29e3;
+  -webkit-clip-path: polygon(0 10px, calc(100% - 15px) 10px, calc(100% - 15px) 0, 100% 50%, calc(100% - 15px) 100%, calc(100% - 15px) calc(100% - 10px), 0 calc(100% - 10px));
+          clip-path: polygon(0 10px, calc(100% - 15px) 10px, calc(100% - 15px) 0, 100% 50%, calc(100% - 15px) 100%, calc(100% - 15px) calc(100% - 10px), 0 calc(100% - 10px));
+  transition: transform 0.5s ease;
+}
+.aside-btn.active .aside-arrow::before {
+  transform: rotate(180deg);
+}
+
 .aside-menu {
+  position: fixed;
   margin-top: 216px;
   grid-column: span 2;
   display: flex;
@@ -1023,11 +1061,347 @@ img {
   grid-column: span 12;
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1201px) {
   .container {
     max-width: 1312px;
-    grid-template-columns: repeat(12, 1fr);
+    grid-template-columns: repeat(12, minmax(60px, min(80px, 8.33vw)));
     -moz-column-gap: 32px;
          column-gap: 32px;
+  }
+}
+@media (max-width: 1200px) {
+  .container {
+    max-width: 928px;
+    grid-template-columns: repeat(8, minmax(56px, 1fr));
+    -moz-column-gap: 32px;
+         column-gap: 32px;
+    padding: 0 16px;
+  }
+  .header .menu {
+    grid-column: 8/8;
+  }
+  .menu-layout {
+    grid-template-columns: repeat(8, minmax(56px, 1fr));
+  }
+  .menu-layout .menu__content {
+    grid-column: span 5;
+    grid-template-columns: repeat(8, 1fr);
+  }
+  .menu-layout .menu__content__heading {
+    grid-column: span 8;
+    grid-template-columns: repeat(8, minmax(56px, 1fr));
+  }
+  .menu-layout .menu__content__heading span {
+    grid-column: span 7;
+  }
+  .menu-layout .menu__content__main {
+    grid-column: 2/8;
+    grid-template-columns: repeat(8, 1fr);
+  }
+  .menu-layout .menu__content__main .performer {
+    grid-column: span 8;
+  }
+  .menu-layout .menu__content__main .desc {
+    grid-column: span 6;
+  }
+  .menu-layout .menu__content__main .phone {
+    grid-column: span 8;
+  }
+  .menu-layout .menu__content .socials {
+    grid-column: 2/8;
+  }
+  .main {
+    grid-column: 3/8;
+    grid-template-columns: repeat(8, minmax(56px, 1fr));
+  }
+  .main__heading {
+    grid-column: span 4;
+  }
+  .main__content {
+    grid-column: span 8;
+    grid-template-columns: repeat(8, minmax(56px, 1fr));
+  }
+  .main__content .section__text {
+    grid-column: span 6;
+  }
+  .main__content .subtitle {
+    grid-column: span 8;
+  }
+  .main__content .preface {
+    grid-column: span 6;
+  }
+  .main .section {
+    grid-column: span 8;
+    grid-template-columns: repeat(8, minmax(56px, 1fr));
+  }
+  .main .section .grid__division {
+    grid-column: span 8;
+    grid-template-columns: repeat(8, minmax(56px, 1fr));
+  }
+  .main .section .grid__division .grid__subtitle {
+    grid-column: span 8;
+  }
+  .main .section .grid__division .table {
+    grid-column: span 7;
+  }
+  .main .section .grid__division .grid__image {
+    grid-column: span 8;
+  }
+  .main .typography__content {
+    grid-column: span 8;
+    grid-template-columns: repeat(8, minmax(56px, 1fr));
+  }
+  .main .typography__tabs {
+    grid-column: span 8;
+  }
+  .main .typography .typography__tab {
+    grid-column: span 8;
+    grid-template-columns: repeat(8, minmax(56px, 1fr));
+  }
+  .main .typography .typography__tab .text-style {
+    grid-column: span 8;
+    grid-template-columns: repeat(8, minmax(56px, 1fr));
+  }
+  .main .typography .typography__tab .text-style .text-desc {
+    grid-column: 1/4;
+  }
+  .main .typography .typography__tab .text-style .text-example {
+    grid-column: 5/8;
+  }
+  .main .ui__division {
+    grid-column: span 8;
+    grid-template-columns: repeat(8, minmax(56px, 1fr));
+  }
+  .main .ui__division .ui__subtitle {
+    grid-column: span 8;
+  }
+  .main .ui__division__description {
+    grid-column: span 8;
+  }
+  .main .ui__division .ui__inputs,
+.main .ui__division .ui__selects,
+.main .ui__division .ui__buttons {
+    grid-column: span 8;
+  }
+  .main .ui__division .ui__selects .ui__select .select-box {
+    height: 38px;
+  }
+  .main .ui__division .ui__buttons {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .main .ui__division .ui__examples {
+    grid-column: span 8;
+    grid-template-columns: repeat(8, minmax(56px, 1fr));
+  }
+  .main .ui__division .ui__examples .checkboxes-examples {
+    grid-column: 1/4;
+  }
+  .main .ui__division .ui__examples .radio-examples {
+    grid-column: 5/8;
+  }
+  .main .ui__division .accordions {
+    grid-column: span 8;
+    grid-template-columns: repeat(8, minmax(56px, 1fr));
+  }
+  .main .ui__division .accordions .accordion {
+    grid-column: span 8;
+    grid-template-columns: repeat(8, minmax(56px, 1fr));
+  }
+  .main .ui__division .accordions .accordion__header {
+    grid-column: span 8;
+  }
+  .main .ui__division .accordions .accordion__text {
+    grid-column: span 6;
+  }
+  .footer {
+    padding-bottom: 48px;
+  }
+  .footer span {
+    grid-column: span 8;
+  }
+}
+@media (max-width: 736px) {
+  .aside-btn {
+    grid-column: none;
+    left: 10px;
+    display: flex;
+  }
+  .aside-menu {
+    transition: transform 0.5s ease;
+    transform: translateX(-180%);
+    width: -webkit-max-content;
+    width: -moz-max-content;
+    width: max-content;
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  }
+  .aside-menu.opened {
+    transform: translateX(0);
+  }
+  .container {
+    max-width: 456px;
+    width: 100%;
+    grid-template-columns: repeat(4, minmax(56px, 88px));
+    -moz-column-gap: 24px;
+         column-gap: 24px;
+    padding: 0 16px;
+  }
+  .header .menu {
+    grid-column: 4/4;
+  }
+  .header .menu.active .menu__line {
+    background: #000;
+  }
+  .menu-layout {
+    width: 100vw;
+    height: 100vh;
+    grid-template-columns: repeat(4, 1fr);
+    -moz-column-gap: 24px;
+         column-gap: 24px;
+  }
+  .menu-layout .menu__content {
+    grid-column: span 3;
+    grid-template-columns: repeat(4, 1fr);
+  }
+  .menu-layout .menu__content__heading {
+    grid-column: span 4;
+    grid-template-columns: repeat(4, minmax(56px, 88px));
+  }
+  .menu-layout .menu__content__heading span {
+    grid-column: span 4;
+  }
+  .menu-layout .menu__content__main {
+    grid-column: 1/5;
+    grid-template-columns: repeat(4, 1fr);
+  }
+  .menu-layout .menu__content__main .performer {
+    grid-column: span 4;
+  }
+  .menu-layout .menu__content__main .desc {
+    grid-column: span 4;
+  }
+  .menu-layout .menu__content__main .phone {
+    grid-column: span 4;
+  }
+  .menu-layout .menu__content .socials {
+    margin-top: 30vh;
+    grid-column: 1/5;
+  }
+  .main {
+    grid-column: span 4;
+    grid-template-columns: repeat(4, minmax(56px, 88px));
+  }
+  .main__heading {
+    grid-column: span 4;
+  }
+  .main__content {
+    grid-column: span 4;
+    grid-template-columns: repeat(4, minmax(56px, 88px));
+  }
+  .main__content .section__text {
+    grid-column: span 4;
+  }
+  .main__content .subtitle {
+    grid-column: span 4;
+  }
+  .main__content .preface {
+    grid-column: span 4;
+  }
+  .main .section {
+    grid-column: span 4;
+    grid-template-columns: repeat(4, minmax(56px, 88px));
+  }
+  .main .section .grid__division {
+    grid-column: span 4;
+    grid-template-columns: repeat(4, minmax(56px, 88px));
+  }
+  .main .section .grid__division .grid__subtitle {
+    grid-column: span 4;
+  }
+  .main .section .grid__division .table {
+    grid-column: span 4;
+    gap: 20px;
+    flex-wrap: wrap;
+  }
+  .main .section .grid__division .table__item {
+    width: 113px;
+  }
+  .main .section .grid__division .grid__image {
+    grid-column: span 4;
+  }
+  .main .typography__content {
+    grid-column: span 4;
+    grid-template-columns: repeat(4, minmax(56px, 88px));
+  }
+  .main .typography__tabs {
+    grid-column: span 4;
+  }
+  .main .typography .typography__tab {
+    grid-column: span 4;
+    grid-template-columns: repeat(4, minmax(56px, 88px));
+  }
+  .main .typography .typography__tab .text-style {
+    grid-column: span 4;
+    grid-template-columns: repeat(4, minmax(56px, 88px));
+  }
+  .main .typography .typography__tab .text-style .text-desc {
+    grid-column: span 4;
+  }
+  .main .typography .typography__tab .text-style .text-example {
+    grid-column: span 4;
+  }
+  .main .ui__division {
+    grid-column: span 4;
+    grid-template-columns: repeat(4, minmax(56px, 88px));
+  }
+  .main .ui__division .ui__subtitle {
+    grid-column: span 4;
+  }
+  .main .ui__division__description {
+    grid-column: span 4;
+  }
+  .main .ui__division .ui__inputs,
+.main .ui__division .ui__selects,
+.main .ui__division .ui__buttons {
+    grid-column: span 4;
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 60px;
+  }
+  .main .ui__division .ui__selects .ui__select .select-box {
+    height: 38px;
+  }
+  .main .ui__division .ui__buttons {
+    grid-template-columns: 1fr;
+  }
+  .main .ui__division .ui__examples {
+    grid-column: span 4;
+    grid-template-columns: repeat(4, minmax(56px, 88px));
+    row-gap: 50px;
+  }
+  .main .ui__division .ui__examples .checkboxes-examples {
+    grid-column: span 4;
+  }
+  .main .ui__division .ui__examples .radio-examples {
+    grid-column: span 4;
+  }
+  .main .ui__division .accordions {
+    grid-column: span 4;
+    grid-template-columns: repeat(4, minmax(56px, 88px));
+  }
+  .main .ui__division .accordions .accordion {
+    grid-column: span 4;
+    grid-template-columns: repeat(4, minmax(56px, 88px));
+  }
+  .main .ui__division .accordions .accordion__header {
+    grid-column: span 4;
+  }
+  .main .ui__division .accordions .accordion__text {
+    grid-column: span 4;
+  }
+  .footer {
+    padding-bottom: 48px;
+  }
+  .footer span {
+    grid-column: span 4;
   }
 }
